K8s/prometheus/backup-service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: stable
    meta.helm.sh/release-namespace: prometheus
  creationTimestamp: "2024-03-08T00:10:02Z"
  labels:
    app.kubernetes.io/instance: stable
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 10.3.1
    helm.sh/chart: grafana-7.3.0
  name: stable-grafana
  namespace: prometheus
  resourceVersion: "3841770"
  uid: 7c11ce01-145a-436f-94cc-439ecf0bed52
spec:
  clusterIP: 10.104.248.91
  clusterIPs:
  - 10.104.248.91
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http-web
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: stable
    app.kubernetes.io/name: grafana
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
