K8s/prometheus/service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
  name: stable-grafana
  namespace: prometheus
spec:
  type: NodePort
  ports:
  - name: http-web
    port: 80
    protocol: TCP
    targetPort: 3000
    nodePort: 30200
  selector:
    app.kubernetes.io/instance: stable
    app.kubernetes.io/name: grafana
  sessionAffinity: None
